# sandbox

./: gitp_config.yaml
.github/workflows/: deploy-alien.yml
alien/: .gitignore  .pygbagignore  ASSET_MANAGEMENT_GUIDE.md  ASSET_REQUIREMENTS.md  PERSISTENCE_GUIDE.md  README.md  STORAGE_IMPLEMENTATION.md  debug_main-pygbag.py  debug_main.py  generate_sound.py  main-pygbag.py  main.py  netlify.toml  parallax_background.py  poetry.toml  pyproject.toml  vercel.json
alien/.github/workflows/: deploy.yml
esuna/: CLAUDE.md  package-lock.json  package.json
hyper_shooting/: .gitignore  CLAUDE.md  README_BGM.md  grenade.py  hyper_shooting.py  pyproject.toml
jundertale/: .gitignore  game.js  index.html  package-lock.json  package.json
llll-ll/: .gitignore  CLAUDE.md  README.md  create-transparent-devto.js  next.config.js  package-lock.json  package.json  tsconfig.json
llll-ll/public/: robots.txt  sw.js  tsconfig.json
nightmare_pajama/: .gitignore  CLAUDE.md  pyproject.toml
nightmare_pajama/src/: choice_system.py  game_engine.py  main.py  save_system.py  scenario.py  sound_manager.py  text_display.py
nostalgic_bbs/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
nostalgic_bbs/public/: nostalgic-bbs.js
nostalgic_counter/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
petpnc/: README.md  main.py
petpnc/cli/: tetris_cli.py
petpnc/core/: tetris.py
python-game-template/: .coverage  .gitignore  CLAUDE.md  README.ja.md  README.md  codecov.yml  compose.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  pytest.ini  requirements.txt
python-game-template/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
python-game-template/.github/workflows/: test.yml
python-game-template/assets/audio/: README.md
python-game-template/assets/images/: README.md
python-game-template/deploy/: Dockerfile  docker-compose.yaml
python-game-template/docker/development/: Dockerfile
python-game-template/docker/production/: Dockerfile
python-game-template/src/: __init__.py  main.py
python-game-template/src/api/: main.py
python-game-template/src/api/routes/: game.py
python-game-template/src/cli/: main.py  ui.py
python-game-template/src/game/: __init__.py  cli.py  core.py  cui.py  gui.py  models.py  models_new.py  ui.py  utils.py
python-game-template/src/locales/: en.json  ja.json
python-game-template/src/utils/: __init__.py  audio.py  error_handler.py  fonts.py  i18n.py  logging.py  performance.py  process_lock.py  security.py  storage.py  terminal.py  timing.py
python-game-template/src/web/: app.py
python-game-template/src/web/static/js/: game.js
python-game-template/src/web/templates/: index.html
python-game-template/static/css/: style.css
python-game-template/tests/: __init__.py  conftest.py  test_api.py  test_api_fixed.py  test_api_new.py  test_cli.py  test_dual_mode.py  test_game.py  test_game_core.py  test_gui_headless.py  test_helpers.py  test_helpers_gui.py  test_i18n.py  test_main.py  test_models.py  test_performance.py  test_process_lock.py  test_security.py  test_simple_process_lock.py  test_terminal.py  test_utils.py  test_web.py
python-game-template/tests/game/: test_core.py  test_models.py
python-game-template/tests/utils/: test_logging.py  test_utils.py
python-game-template/tests/web/: test_web.py
python-game-template_old/: README.ja.md  codecov.yml
python-game-template_old/.devcontainer/: compose.yaml
python-game-template_old/templates/: game.html  index.html
python-game-template_old/tests/: test_api.py  test_cli.py  test_models.py
rust-tool-template/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.ja.md  README.md  clippy.toml  compose.yaml  docker-daemon-config-example.json  rustfmt.toml  tauri.conf.json
rust-tool-template/.cargo/: config.toml
rust-tool-template/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
rust-tool-template/.github/workflows/: ci.yml
rust-tool-template/locales/en/: messages.ftl
rust-tool-template/locales/ja/: messages.ftl
rust-tool-template/src/: error.rs  i18n.rs  lib.rs  main.rs  platform.rs
rust-tool-template/src-tauri/: Cargo.toml  tauri.conf.json
rust-tool-template/src-tauri/icons/: README.md  icon.icns
rust-tool-template/src-tauri/src/: main.rs
rust-tool-template/src/api/: handlers.rs  mod.rs
rust-tool-template/src/cli/: mod.rs  tui.rs
rust-tool-template/src/core/: logic.rs  mod.rs
rust-tool-template/src/tauri/: commands.rs  mod.rs
rust-tool-template/src/utils/: i18n.rs  logging.rs  mod.rs  platform.rs
rust-tool-template/tests/: integration_tests.rs  unit_tests.rs
rust-tool-template_old/: .gitignore  CLAUDE.md  README.md  clippy.toml  codecov.yml  rustfmt.toml
rust-tool-template_old/src/: config.rs  error.rs  logging.rs
rust-tool-template_old/src-tauri/: Cargo.toml
rust-tool-template_old/tests/: integration_tests.rs  unit_tests.rs
sid-note/: .editorconfig  .env.example  .eslintrc.json  .gitignore  CLAUDE.md  README.ja.md  README.md  alias_test_results.json  debug_alias.js  debug_chord.js  debug_chord_simple.js  debug_rootnote.js  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  test-utils.mjs  tsconfig.jest.json  tsconfig.json
sid-note/.devcontainer/: Dockerfile  devcontainer.json
sid-note/src/: functionalHarmony.test.ts  functionalHarmony.ts
y4m2d2/: .gitignore  Cargo.toml  README.ja.md  README.md  clippy.toml  rustfmt.toml
y4m2d2/.github/workflows/: ci.yml
y4m2d2/resources/languages/: en.json  ja.json
y4m2d2/src/: args.rs  error.rs  lib.rs  main.rs  photo.rs
y4m2d2/src/core/: mod.rs  processor.rs  renamer.rs
y4m2d2/src/i18n/: mod.rs
y4m2d2/src/media/: date.rs  mod.rs  orientation.rs
y4m2d2/src/photo/: date.rs  mod.rs  orientation.rs  preview.rs  processor.rs  renamer.rs  video.rs
y4m2d2/src/ui/: display.rs  mod.rs  prompt.rs
y4m2d2/src/utils/: fs.rs  logger.rs  mod.rs  progress.rs
y4m2d2/tests/: integration_test.rs  test_utils.rs
(+170 files in other folders)
