[tool.poetry]
name = "alien"
version = "0.1.0"
description = "Alien game"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alien = "main:main"