[project]
name = "hyper-shooting"
version = "0.1.0"
description = "A Touhou-style bullet hell shooting game made with Pygame"
authors = [
    {name = "kako-jun"}
]
readme = "CLAUDE.md"
requires-python = "^3.8"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
