[project]
name = "nightmare-pajama"
version = "0.1.0"
description = "Sound novel game like Kamaitachi no Yoru"
authors = [
    {name = "kako-jun",email = "3541096+kako-jun@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
