[project]
name = "python-game-template"
version = "0.1.0"
description = "A flexible and extensible game template with CLI and Web interfaces"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.68.0",
    "flask>=2.0.0",
    "uvicorn>=0.15.0",
    "rich>=10.0.0",
    "pytest>=6.0.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
    "requests>=2.26.0",
    "curses>=2.2",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
