[tool.poetry]
name = "python-game-template"
version = "0.1.0"
description = "A flexible and extensible game template with CLI and Web interfaces"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.68.0"
uvicorn = ">=0.15.0"
rich = ">=10.0.0"
python-dotenv = ">=0.19.0"
pydantic = ">=1.8.0"
requests = ">=2.26.0"
typing-extensions = ">=4.0.0"
psutil = "^5.9.0"
jinja2 = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = "^2.12.1"
httpx = "^0.28.1"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
