[package]
name = "rust-tool-template"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "A template for creating Rust CLI/GUI applications with Tauri and TUI support"
repository = "https://github.com/kako-jun/rust-tool-template"
keywords = ["cli", "gui", "tauri", "tui", "template"]
categories = ["command-line-utilities", "gui"]

[[bin]]
name = "rust-tool-template"
path = "src/main.rs"

[dependencies]
# コア機能
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI引数解析
clap = { version = "4.0", features = ["derive"] }

# TUI関連
ratatui = "0.25"
crossterm = "0.27"

# ログ機能
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 設定管理
config = "0.13"
directories = "5.0"
toml = "0.8"

# 多言語対応
fluent = "0.16"
fluent-langneg = "0.13"
sys-locale = "0.3"
unic-langid = "0.9"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tauri]
version = "1.5"
features = [
  "api-all",
  "updater",
  "window-all",
  "shell-open"
]
optional = true

[features]
default = ["gui"]
gui = ["tauri"]
cli-only = []

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = ["src-tauri"]