[package]
name = "y4m2d2"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun <kako-jun@example.com>"]
description = "写真と動画ファイルを整理・リネームするためのRust製ツール"
license = "MIT"
repository = "https://github.com/kako-jun/y4m2d2"
readme = "README.md"
keywords = ["photo", "video", "rename", "exif", "organization"]
categories = ["command-line-utilities", "filesystem", "multimedia"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
kamadak-exif = "0.6"
ffmpeg-next = "6.1"
image = "0.24"
indicatif = "0.17"
log = "0.4"
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
viuer = "0.7"
term_size = "0.3"
colored = "2.0"

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
normal = ["test-case"]

[package.metadata.cargo-udeps.ignore-dev]
normal = ["test-case"]
