[package]
name = "rust-tool-template"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]

[build-dependencies]
tauri-build = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
