[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["kako-jun"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
rust-tool-template = { path = ".." }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
